--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,19 @@
 @import "tailwindcss";
 
-*{
+* {
   font-family: sans-serif;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spin-slow {
+  animation: spin 10s linear infinite;
 }
